<resources>
    <string name="app_name">FlightCentreKotlinTest</string>

    <string name="identifier_airline_code">Code: %1$s</string>
    <string name="identifier_flight_number">Flight # %1$s</string>
    <string name="identifier_duration">Duration: %1$s </string>
    <string name="identifier_airport">Airport: %1$s</string>
    <string name="identifier_city">City: %1$s</string>
    <string name="identifier_created_at">Created at: \n %1$s</string>
    <string name="identifier_updated_at">Last Updated: \n %1$s</string>

    <string name="identifier_flight_number2">Flight #</string>
    <string name="identifier_flight_destination">Destination</string>
    <string name="identifier_flight_from">From</string>
    <string name="identifier_to">To</string>
    <string name="identifier_flight_departure_date">Date</string>

    <string name="test_flight_number">1XB</string>
    <string name="test_flight_from">USA</string>
    <string name="test_flight_to">Belgium</string>
    <string name="test_departure_date">12/02/2018</string>
    <string name="test_departure_time">18:23</string>
    <string name="test">TEST</string>

    <string name="loading_dots">…</string>
    <string name="image_descriptor_land">To</string>
    <string name="image_descriptor_from">From</string>
</resources>
